# QtAppForCam-LSY201-TTL-INF

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mimages.qrc
serialport/: mserialport.cpp  mserialport.h  mserialport.ui  receiverthread.cpp  senderthread.cpp
settings/: mngsportsetting.cpp  mngsportsetting.h  serialportsettings.cpp  serialportsettings.h  serialportsettings.ui
uvideo/: globals.cpp  globals.h  videoutil.cpp  videoutil.h
